...
    "errorExpired": "Кодын хугацаа дууссан. Шинэ код авна уу.",
    "securityTitle": "Аюулгүй байдал",
    "verify": "Баталгаажуулах"
  },
  "Otp-migration": {
    "heading": "Утасны дугаараа бүртгүүлнэ үү",
    "label": "Утасны дугаар",
    "helper": "Facebook нэвтрэлтэд утасны дугаар нэмнэ",
    "errorInvalidPhone": "Утасны дугаар буруу байна",
    "errorNetwork": "Интернэт холболтоо шалгана уу",
    "placeholder": "9911 2233",
    "submit": "Код авах",
    "skip": "Дараа хийх"
...
